# goit-pythonweb-hw-06

./: main.py  pyproject.toml  seed.py
conf/: db.py
entity/: models.py
migrations/: env.py
migrations/versions/: 70a8560d2416_init_project.py
